# play_auth

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  mp_docker-compose.yml  notes  source.json  sqlx-data.json
.github/workflows/: ci.yml
auth/: Cargo.toml  sqlx-data.json
auth/migrations/: 20220227003846_play_user.down.sql  20220227003846_play_user.up.sql
auth/src/: controllers.rs  errors.rs  events.rs  helpers.rs  lib.rs  macros.rs  main.rs  response.rs  routes.rs  settings.rs
auth/src/base_repository/: user.rs
auth/src/controllers/: forgot_password.rs  health_check.rs  login.rs  logout.rs  logout_token.rs  resend_verification.rs  reset_password.rs  signup.rs  verify_user.rs
auth/src/errors/: app.rs  catchers.rs
auth/src/events/: producer.rs  producer_context.rs
auth/src/helpers/: auth.rs  commons.rs  email_template.rs  jwt.rs  jwt_test.rs  mail.rs  pwd.rs  requests.rs  response.rs  test_helpers.rs  tokens.rs  variables.rs
auth/src/helpers/auth/: jwt.rs  pwd.rs
auth/src/helpers/email_template/: forgot_password.rs  signup.rs
auth/src/helpers/jwt_tokens/: jwt.rs  jwt.test.rs  jwt_test.rs
auth/src/helpers/mails/: email.rs  email.test.rs
auth/src/helpers/passwords/: pwd.rs  pwd.test.rs
auth/src/macros/: env_macro.rs  recurrence.rs
auth/src/settings/: app.rs  config.rs  database.rs  email.rs  variables.rs
auth/src/stubs/: email.rs
auth/tests/: signup.rs
auth/tests/api/: forgot_pwd_test.rs  health_check.rs  helpers.rs  login_test.rs  logout_test.rs  main.rs  resend_verification_test.rs  reset_pwd_test.rs  signup.rs  signup_test.rs  verify_user_test.rs
auth/tests/api/helpers/: app.rs  db.rs  response.rs  utils.rs
auth_macro/: Cargo.toml
auth_macro/src/: jwt.rs
auth_macro_derive/: Cargo.toml
auth_macro_derive/src/: jwt.rs  lib.rs
configuration/: base.yaml  local.yaml  test.yaml
data/: init.sql
docker-entrypoint-initdb.d/: create-db.sql
scripts/: connector.json  init.sh  init_db.sh  kafka.entrypoint.sh  migrate_db.sh
