[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "auth"
path = "src/main.rs"

[features]
test = []

[dependencies]
anyhow = "1.0.53"
argon2 = { version = "0.4.0", features = ["std"] }
auth_macro = { path = "../auth_macro" }
auth_macro_derive = { path = "../auth_macro_derive" }
base64ct = "1.4.1"
config = { version = "0.12.0", features = ["yaml"]}
derive_more = "0.99.17"
dotenv = "0.15.0"

fancy-regex = "0.8.0"
lazy_static = "1.4.0"
lettre = { version = "0.10.0-rc.4", features = ["rustls-tls"] }
rand_core = { version = "0.6", features = ["std"] }
rdkafka = { version = "0.28", features = ["dynmaic-linking"] }
redis = { version="0.21.5", features=["tokio-native-tls-comp", "tokio-comp", "aio", "connection-manager", "cluster"]}
jsonwebtoken = {version = "8", default-features = false }
serde-with-expand-env = "1.0.0"
mockall_double = "0.1.0"

secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive"] }
serde-aux = "3.0.1"
serde_derive = "1.0.133"
serde_json = "1.0.75"
sqlx = { version="0.5.11", features = ["chrono", "tls", "offline", "json", "migrate", "uuid", "postgres", "runtime-tokio-native-tls"] }
thiserror = "1.0.30"
uuid = { version="0.8.2", features = ["serde", "v4"] }
sha2 = "0.10.2"


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]


[dev-dependencies]
fake = "2.4"
rand = "0.8"
wiremock = "0.5"
mockall = "0.11.0"